[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/fonts/LUCKIESTGUY-REGULAR.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/art/parallax/4.png" type="Texture" id=2]
[ext_resource path="res://assets/tilesets/tiles.tres" type="TileSet" id=3]
[ext_resource path="res://assets/art/parallax/2.png" type="Texture" id=4]
[ext_resource path="res://assets/art/places/shop.png" type="Texture" id=5]
[ext_resource path="res://assets/art/places/training.png" type="Texture" id=6]
[ext_resource path="res://assets/art/parallax/3.png" type="Texture" id=7]
[ext_resource path="res://assets/art/parallax/1.png" type="Texture" id=8]
[ext_resource path="res://scenes/Ship/Ship.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Utility/CharacterCreator/CharacterCreator.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Utility/MainMenu/MainMenu.gd" type="Script" id=11]
[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Utility/Particles/Snowfall.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/particles/ConfrettiRain.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/particles/Confretti.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 84, 35.25 )

[sub_resource type="DynamicFont" id=3]
size = 72
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 479.5, 11.625 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 162.539, 75.8944 )

[sub_resource type="DynamicFont" id=6]
size = 125
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node"]
script = ExtResource( 11 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 544, -160 )
transform = Transform2D( 1, 0, 0, 1, 544, -160 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0 )
motion_mirroring = Vector2( 2720, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 10, 10 )
texture = ExtResource( 8 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 1 )
motion_mirroring = Vector2( 2720, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 2720, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 2720, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="buildings" type="Node2D" parent="."]

[node name="Shop" type="Area2D" parent="buildings"]
position = Vector2( -2180, -499 )
__meta__ = {
"_edit_group_": true
}

[node name="Shop" type="Sprite" parent="buildings/Shop"]
position = Vector2( 107, 210 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="buildings/Shop"]
position = Vector2( 140, 493 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="buildings/Shop"]
margin_left = 38.0
margin_top = 185.0
margin_right = 210.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 3 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Training" type="Area2D" parent="buildings"]
position = Vector2( 1021, -871 )
__meta__ = {
"_edit_group_": true
}

[node name="Training" type="Sprite" parent="buildings/Training"]
position = Vector2( 15, 47 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="buildings/Training"]
position = Vector2( 6.5, 268.625 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="buildings/Training"]
margin_left = 102.0
margin_top = -20.0
margin_right = 411.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
text = "Training"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Area2D" parent="buildings"]
position = Vector2( 3346, -65.7969 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="buildings/Port"]
shape = SubResource( 5 )
disabled = true

[node name="Ship" parent="buildings" instance=ExtResource( 9 )]
position = Vector2( 4053.81, -853 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 5, 5 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 21, 21 )
collision_bounce = 0.56
format = 1
tile_data = PoolIntArray( -196604, 79, 0, -196603, 79, 0, -196602, 79, 0, -196601, 79, 0, -196600, 79, 0, -196599, 79, 0, -196598, 79, 0, -196597, 79, 0, -196596, 79, 0, -196595, 79, 0, -196594, 79, 0, -196593, 79, 0, -65564, 73, 0, -65562, 842, 0, -65561, 841, 0, -65560, 842, 0, -65559, 841, 0, -65558, 842, 0, -65557, 841, 0, -65556, 842, 0, -65555, 841, 0, -65554, 842, 0, -65553, 841, 0, -65552, 842, 0, -65551, 841, 0, -28, 605, 0, 65507, 613, 0, 65508, 614, 0, 65509, 617, 0, 131043, 616, 0, 131044, 614, 0, 131045, 617, 0, 196579, 17, 0, 196580, 607, 0, 196581, 17, 0, 196582, 400, 0, 196583, 403, 0, 196584, 404, 0, 196585, 401, 0, 196586, 400, 0, 196587, 401, 0, 196591, 401, 0, 196592, 400, 0, 196593, 400, 0, 262093, 79, 0, 262094, 79, 0, 262095, 79, 0, 262096, 79, 0, 262097, 79, 0, 262098, 79, 0, 262099, 79, 0, 262100, 79, 0, 262101, 79, 0, 262102, 79, 0, 262103, 79, 0, 262104, 79, 0, 262105, 79, 0, 262106, 79, 0, 262107, 79, 0, 262108, 79, 0, 262109, 79, 0, 262110, 79, 0, 262111, 79, 0, 262112, 79, 0, 262113, 79, 0, 262114, 79, 0, 262115, 79, 0, 262116, 79, 0, 262117, 79, 0, 262118, 79, 0, 262119, 79, 0, 262120, 79, 0, 262121, 79, 0, 262122, 79, 0, 262123, 79, 0, 262124, 79, 0, 262125, 79, 0, 262126, 79, 0, 262127, 79, 0, 262128, 79, 0, 262129, 79, 0, 262130, 79, 0, 262131, 79, 0, 262132, 79, 0, 262133, 79, 0, 262134, 79, 0, 262135, 79, 0, 262136, 79, 0, 262137, 79, 0, 262138, 79, 0, 262139, 79, 0, 262140, 79, 0, 262141, 79, 0, 262142, 79, 0, 262143, 79, 0, 196608, 79, 0, 196609, 79, 0, 196610, 78, 0, 196611, 79, 0, 196612, 79, 0, 196613, 79, 0, 196614, 79, 0, 196615, 79, 0, 196616, 79, 0, 196617, 80, 0, 196618, 79, 0, 196619, 79, 0, 196620, 83, 0, 327629, 97, 0, 327630, 97, 0, 327631, 97, 0, 327632, 97, 0, 327633, 97, 0, 327634, 97, 0, 327635, 97, 0, 327636, 97, 0, 327637, 97, 0, 327638, 97, 0, 327639, 97, 0, 327640, 97, 0, 327641, 97, 0, 327642, 97, 0, 327643, 97, 0, 327644, 97, 0, 327645, 97, 0, 327646, 97, 0, 327647, 97, 0, 327648, 97, 0, 327649, 97, 0, 327650, 97, 0, 327651, 97, 0, 327652, 97, 0, 327653, 97, 0, 327654, 97, 0, 327655, 97, 0, 327656, 97, 0, 327657, 97, 0, 327658, 97, 0, 327659, 97, 0, 327660, 97, 0, 327661, 97, 0, 327662, 97, 0, 327663, 97, 0, 327664, 97, 0, 327665, 97, 0, 327666, 97, 0, 327667, 97, 0, 327668, 97, 0, 327669, 97, 0, 327670, 97, 0, 327671, 97, 0, 327672, 97, 0, 327673, 97, 0, 327674, 97, 0, 327675, 97, 0, 327676, 97, 0, 327677, 97, 0, 327678, 97, 0, 327679, 97, 0, 262144, 97, 0, 262145, 97, 0, 262146, 97, 0, 262147, 97, 0, 262148, 97, 0, 262149, 97, 0, 262150, 97, 0, 262151, 97, 0, 262152, 97, 0, 262153, 97, 0, 262154, 97, 0, 262155, 97, 0, 262156, 102, 0, 262157, 83, 0, 262163, 82, 0, 262164, 79, 0, 262165, 79, 0, 262166, 79, 0, 262167, 79, 0, 393165, 97, 0, 393166, 97, 0, 393167, 97, 0, 393168, 97, 0, 393169, 97, 0, 393170, 97, 0, 393171, 97, 0, 393172, 97, 0, 393173, 97, 0, 393174, 97, 0, 393175, 97, 0, 393176, 97, 0, 393177, 97, 0, 393178, 97, 0, 393179, 97, 0, 393180, 97, 0, 393181, 97, 0, 393182, 97, 0, 393183, 97, 0, 393184, 97, 0, 393185, 97, 0, 393186, 97, 0, 393187, 97, 0, 393188, 97, 0, 393189, 97, 0, 393190, 97, 0, 393191, 97, 0, 393192, 97, 0, 393193, 97, 0, 393194, 97, 0, 393195, 97, 0, 393196, 97, 0, 393197, 97, 0, 393198, 97, 0, 393199, 97, 0, 393200, 97, 0, 393201, 97, 0, 393202, 97, 0, 393203, 97, 0, 393204, 97, 0, 393205, 97, 0, 393206, 97, 0, 393207, 97, 0, 393208, 97, 0, 393209, 97, 0, 393210, 97, 0, 393211, 97, 0, 393212, 97, 0, 393213, 97, 0, 393214, 97, 0, 393215, 97, 0, 327680, 97, 0, 327681, 97, 0, 327682, 97, 0, 327683, 97, 0, 327684, 97, 0, 327685, 97, 0, 327686, 97, 0, 327687, 97, 0, 327688, 97, 0, 327689, 97, 0, 327690, 97, 0, 327691, 97, 0, 327692, 97, 0, 327693, 102, 0, 327694, 83, 0, 327698, 82, 0, 327699, 101, 0, 327700, 97, 0, 327701, 97, 0, 327702, 97, 0, 327703, 97, 0, 458701, 97, 0, 458702, 97, 0, 458703, 97, 0, 458704, 97, 0, 458705, 97, 0, 458706, 97, 0, 458707, 97, 0, 458708, 97, 0, 458709, 97, 0, 458710, 97, 0, 458711, 97, 0, 458712, 97, 0, 458713, 97, 0, 458714, 97, 0, 458715, 97, 0, 458716, 97, 0, 458717, 97, 0, 458718, 97, 0, 458719, 97, 0, 458720, 97, 0, 458721, 97, 0, 458722, 97, 0, 458723, 97, 0, 458724, 97, 0, 458725, 97, 0, 458726, 97, 0, 458727, 97, 0, 458728, 97, 0, 458729, 97, 0, 458730, 97, 0, 458731, 97, 0, 458732, 97, 0, 458733, 97, 0, 458734, 97, 0, 458735, 97, 0, 458736, 97, 0, 458737, 97, 0, 458738, 97, 0, 458739, 97, 0, 458740, 97, 0, 458741, 97, 0, 458742, 97, 0, 458743, 97, 0, 458744, 97, 0, 458745, 97, 0, 458746, 97, 0, 458747, 97, 0, 458748, 97, 0, 458749, 97, 0, 458750, 97, 0, 458751, 97, 0, 393216, 97, 0, 393217, 97, 0, 393218, 97, 0, 393219, 97, 0, 393220, 97, 0, 393221, 97, 0, 393222, 97, 0, 393223, 97, 0, 393224, 97, 0, 393225, 97, 0, 393226, 97, 0, 393227, 97, 0, 393228, 97, 0, 393229, 97, 0, 393230, 102, 0, 393231, 83, 0, 393233, 82, 0, 393234, 101, 0, 393235, 97, 0, 393236, 97, 0, 393237, 97, 0, 393238, 97, 0, 393239, 97, 0, 524237, 97, 0, 524238, 97, 0, 524239, 97, 0, 524240, 97, 0, 524241, 97, 0, 524242, 97, 0, 524243, 97, 0, 524244, 97, 0, 524245, 97, 0, 524246, 97, 0, 524247, 97, 0, 524248, 97, 0, 524249, 97, 0, 524250, 97, 0, 524251, 97, 0, 524252, 97, 0, 524253, 97, 0, 524254, 97, 0, 524255, 97, 0, 524256, 97, 0, 524257, 97, 0, 524258, 97, 0, 524259, 97, 0, 524260, 97, 0, 524261, 97, 0, 524262, 97, 0, 524263, 97, 0, 524264, 97, 0, 524265, 97, 0, 524266, 97, 0, 524267, 97, 0, 524268, 97, 0, 524269, 97, 0, 524270, 97, 0, 524271, 97, 0, 524272, 97, 0, 524273, 97, 0, 524274, 97, 0, 524275, 97, 0, 524276, 97, 0, 524277, 97, 0, 524278, 97, 0, 524279, 97, 0, 524280, 97, 0, 524281, 97, 0, 524282, 97, 0, 524283, 97, 0, 524284, 97, 0, 524285, 97, 0, 524286, 97, 0, 524287, 97, 0, 458752, 97, 0, 458753, 97, 0, 458754, 97, 0, 458755, 97, 0, 458756, 97, 0, 458757, 97, 0, 458758, 97, 0, 458759, 97, 0, 458760, 97, 0, 458761, 97, 0, 458762, 97, 0, 458763, 97, 0, 458764, 97, 0, 458765, 97, 0, 458766, 97, 0, 458767, 102, 0, 458768, 77, 0, 458769, 101, 0, 458770, 97, 0, 458771, 97, 0, 458772, 97, 0, 458773, 97, 0, 458774, 97, 0, 458775, 97, 0, 589773, 97, 0, 589774, 97, 0, 589775, 97, 0, 589776, 97, 0, 589777, 97, 0, 589778, 97, 0, 589779, 97, 0, 589780, 97, 0, 589781, 97, 0, 589782, 97, 0, 589783, 97, 0, 589784, 97, 0, 589785, 97, 0, 589786, 97, 0, 589787, 97, 0, 589788, 97, 0, 589789, 97, 0, 589790, 97, 0, 589791, 97, 0, 589792, 97, 0, 589793, 97, 0, 589794, 97, 0, 589795, 97, 0, 589796, 97, 0, 589797, 97, 0, 589798, 97, 0, 589799, 97, 0, 589800, 97, 0, 589801, 97, 0, 589802, 97, 0, 589803, 97, 0, 589804, 97, 0, 589805, 97, 0, 589806, 97, 0, 589807, 97, 0, 589808, 97, 0, 589809, 97, 0, 589810, 97, 0, 589811, 97, 0, 589812, 97, 0, 589813, 97, 0, 589814, 97, 0, 589815, 97, 0, 589816, 97, 0, 589817, 97, 0, 589818, 97, 0, 589819, 97, 0, 589820, 97, 0, 589821, 97, 0, 589822, 97, 0, 589823, 97, 0, 524288, 97, 0, 524289, 97, 0, 524290, 97, 0, 524291, 97, 0, 524292, 97, 0, 524293, 97, 0, 524294, 97, 0, 524295, 97, 0, 524296, 97, 0, 524297, 97, 0, 524300, 167, 0, 524301, 167, 0, 524302, 167, 0, 524303, 167, 0, 524304, 167, 0, 524305, 167, 0, 524306, 167, 0, 524307, 167, 0, 655309, 97, 0, 655310, 97, 0, 655311, 97, 0, 655312, 97, 0, 655313, 97, 0, 655314, 97, 0, 655315, 97, 0, 655316, 97, 0, 655317, 97, 0, 655318, 97, 0, 655319, 97, 0, 655320, 97, 0, 655321, 97, 0, 655322, 97, 0, 655323, 97, 0, 655324, 97, 0, 655325, 97, 0, 655326, 97, 0, 655327, 97, 0, 655328, 97, 0, 655329, 97, 0, 655330, 97, 0, 655331, 97, 0, 655332, 97, 0, 655333, 97, 0, 655334, 97, 0, 655335, 97, 0, 655336, 97, 0, 655337, 97, 0, 655338, 97, 0, 655339, 97, 0, 655340, 97, 0, 655341, 97, 0, 655342, 97, 0, 655343, 97, 0, 655344, 97, 0, 655345, 97, 0, 655346, 97, 0, 655347, 97, 0, 655348, 97, 0, 655349, 97, 0, 655350, 97, 0, 655351, 97, 0, 655352, 97, 0, 655353, 97, 0, 655354, 97, 0, 655355, 97, 0, 655356, 97, 0, 655357, 97, 0, 655358, 97, 0, 655359, 97, 0, 589824, 97, 0, 589825, 97, 0, 589826, 97, 0, 589827, 97, 0, 589828, 97, 0, 589829, 97, 0, 589830, 97, 0, 589831, 97, 0, 589832, 97, 0, 589833, 97, 0, 720845, 97, 0, 720846, 97, 0, 720847, 97, 0, 720848, 97, 0, 720849, 97, 0, 720850, 97, 0, 720851, 97, 0, 720852, 97, 0, 720853, 97, 0, 720854, 97, 0, 720855, 97, 0, 720856, 97, 0, 720857, 97, 0, 720858, 97, 0, 720859, 97, 0, 720860, 97, 0, 720861, 97, 0, 720862, 97, 0, 720863, 97, 0, 720864, 97, 0, 720865, 97, 0, 720866, 97, 0, 720867, 97, 0, 720868, 97, 0, 720869, 97, 0, 720870, 97, 0, 720871, 97, 0, 720872, 97, 0, 720873, 97, 0, 720874, 97, 0, 720875, 97, 0, 720876, 97, 0, 720877, 97, 0, 720878, 97, 0, 720879, 97, 0, 720880, 97, 0, 720881, 97, 0, 720882, 97, 0, 720883, 97, 0, 720884, 97, 0, 720885, 97, 0, 720886, 97, 0, 720887, 97, 0, 720888, 97, 0, 720889, 97, 0, 720890, 97, 0, 720891, 97, 0, 720892, 97, 0, 720893, 97, 0, 720894, 97, 0, 720895, 97, 0, 655360, 97, 0, 655361, 97, 0, 655362, 97, 0, 655363, 97, 0, 655364, 97, 0, 655365, 97, 0, 655366, 97, 0, 655367, 97, 0, 655368, 97, 0, 655369, 97, 0, 786381, 97, 0, 786382, 97, 0, 786383, 97, 0, 786384, 97, 0, 786385, 97, 0, 786386, 97, 0, 786387, 97, 0, 786388, 97, 0, 786389, 97, 0, 786390, 97, 0, 786391, 97, 0, 786392, 97, 0, 786393, 97, 0, 786394, 97, 0, 786395, 97, 0, 786396, 97, 0, 786397, 97, 0, 786398, 97, 0, 786399, 97, 0, 786400, 97, 0, 786401, 97, 0, 786402, 97, 0, 786403, 97, 0, 786404, 97, 0, 786405, 97, 0, 786406, 97, 0, 786407, 97, 0, 786408, 97, 0, 786409, 97, 0, 786410, 97, 0, 786411, 97, 0, 786412, 97, 0, 786413, 97, 0, 786414, 97, 0, 786415, 97, 0, 786416, 97, 0, 786417, 97, 0, 786418, 97, 0, 786419, 97, 0, 786420, 97, 0, 786421, 97, 0, 786422, 97, 0, 786423, 97, 0, 786424, 97, 0, 786425, 97, 0, 786426, 97, 0, 786427, 97, 0, 786428, 97, 0, 786429, 97, 0, 786430, 97, 0, 786431, 97, 0, 720896, 97, 0, 720897, 97, 0, 720898, 97, 0, 720899, 97, 0, 720900, 97, 0, 720901, 97, 0, 720902, 97, 0, 720903, 97, 0, 720904, 97, 0, 720905, 97, 0, 851917, 97, 0, 851918, 97, 0, 851919, 97, 0, 851920, 97, 0, 851921, 97, 0, 851922, 97, 0, 851923, 97, 0, 851924, 97, 0, 851925, 97, 0, 851926, 97, 0, 851927, 97, 0, 851928, 97, 0, 851929, 97, 0, 851930, 97, 0, 851931, 97, 0, 851932, 97, 0, 851933, 97, 0, 851934, 97, 0, 851935, 97, 0, 851936, 97, 0, 851937, 97, 0, 851938, 97, 0, 851939, 97, 0, 851940, 97, 0, 851941, 97, 0, 851942, 97, 0, 851943, 97, 0, 851944, 97, 0, 851945, 97, 0, 851946, 97, 0, 851947, 97, 0, 851948, 97, 0, 851949, 97, 0, 851950, 97, 0, 851951, 97, 0, 851952, 97, 0, 851953, 97, 0, 851954, 97, 0, 851955, 97, 0, 851956, 97, 0, 851957, 97, 0, 851958, 97, 0, 851959, 97, 0, 851960, 97, 0, 851961, 97, 0, 851962, 97, 0, 851963, 97, 0, 851964, 97, 0, 851965, 97, 0, 851966, 97, 0, 851967, 97, 0, 786432, 97, 0, 786433, 97, 0, 786434, 97, 0, 786435, 97, 0, 786436, 97, 0, 786437, 97, 0, 786438, 97, 0, 786439, 97, 0, 786440, 97, 0, 786441, 97, 0 )

[node name="Player" parent="." instance=ExtResource( 12 )]

[node name="Confretti" parent="Player" instance=ExtResource( 14 )]
position = Vector2( 0, -800 )

[node name="Snow" parent="Player" instance=ExtResource( 13 )]
position = Vector2( 0, -800 )
rotation = -4.46638e-06
preprocess = 10.0

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="CharacterCreator" parent="HUD" instance=ExtResource( 10 )]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="."]
margin_left = 1282.0
margin_top = 36.0
margin_right = 2288.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 6 )
text = "Happy New Year
2022"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Confretti" parent="Label" instance=ExtResource( 15 )]
position = Vector2( 304, -213 )

[node name="Confretti2" parent="Label" instance=ExtResource( 15 )]
position = Vector2( 920, 231 )

[node name="Confretti3" parent="Label" instance=ExtResource( 15 )]
position = Vector2( -168, -28 )

[node name="Confretti4" parent="Label" instance=ExtResource( 15 )]
position = Vector2( 119, 195 )

[node name="Confretti5" parent="Label" instance=ExtResource( 15 )]
position = Vector2( 814, -153 )

[connection signal="body_entered" from="buildings/Shop" to="." method="_on_Shop_body_entered"]
[connection signal="body_entered" from="buildings/Training" to="." method="_on_Training_body_entered"]
[connection signal="body_entered" from="buildings/Port" to="." method="_on_Port_body_entered"]
